# myntcd

./: install.sh
daemon/: autostuff  configure.ac
daemon/src/: Makefile.am  Makefile.in  myntcd.c  myntcd.conf
docs/: INSTALL  mysql.sql  traffic.sql
etc/cron.d/: myntcd
etc/init.d/: myntcd
etc/myntcd/: myntcd.conf
tcws/etc/cron.d/: tcrules
tcws/etc/shorewall/: tcclasses  tcdevices  tcrules  tcrules.def
tcws/etc/shorewall6/: tcclasses  tcdevices  tcrules  tcrules.def
web/: blacklist.php  ip_stat.php  itstat.php  myntcd-hu.po  myntcd.css  myntcd.module  myntcd.pot  mystat.php  stat.php  style.css  top.php  whitelist.php
web/include/: lib.php
web/myntcd/: myntcd.admin.inc  myntcd.info  myntcd.module
web/myntcd/css/: myntcd.css
web/myntcd/translations/: hu.po  myntcd.pot
web/sysadminmenu/: sysadminmenu.info  sysadminmenu.module
web/sysadminmenu/translations/: hu.po  sysadminmenu.pot
